apps/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v3.2.4@sha256:d317916b28090c33eb36b308464ea391f8b7df1d850fcfea227a39ec879718c2
        ports:
        - containerPort: 2283
        volumeMounts:
        - name: library
          mountPath: /usr/src/app/upload
        - name: config-volume
          mountPath: /config
          readOnly: true
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: library-pvc
      - name: config-volume
        secret:
          secretName: secrets
