apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    app: immich
  ports:
  - port: 2283
    targetPort: 2283
