apps/immich/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: immich
spec:
  parentRefs:
  - name: ingress-gateway 
    namespace: cluster-gateway 
  hostnames:
  - "immich.hoareau-marion.eu"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich
      port: 2283
